speaker details,forum correction,qr code left

--- a/app/src/main/res/menu/activity_nav_dra_drawer.xml
+++ b/app/src/main/res/menu/activity_nav_dra_drawer.xml
@@ -24,6 +24,11 @@
             android:icon="@drawable/forum"
             android:title="Forum" />
 
+        <item
+            android:id="@+id/aboutus"
+            android:icon="@drawable/forum"
+            android:title="About Us" />
+
     </group>
 
 </menu>
