--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -12,4 +12,19 @@
         android:text="2nd activity"
         android:layout_centerInParent="true"/>
 
+    <Button
+        android:id="@+id/buttonNav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NavAct"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.337" />
+
 </android.support.constraint.ConstraintLayout>
