--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#ff3b30</color>
     <color name="colorPrimaryDark">#ff3b30</color>
-    <color name="colorAccent">#f99e00</color>
+    <color name="colorAccent">#ffffff</color>
 </resources>
