QR activity deleted,CardView deleted

--- a/app/src/main/res/layout/forumlayout.xml
+++ b/app/src/main/res/layout/forumlayout.xml
@@ -33,7 +33,8 @@
         android:hint="Type here"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/send" />
 
     <Button
         android:id="@+id/send"
