--- a/app/src/main/res/layout/forum_row_layout.xml
+++ b/app/src/main/res/layout/forum_row_layout.xml
@@ -6,9 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
+    <RelativeLayout
         android:id="@+id/card"
-        android:layout_width="match_parent"
+        android:layout_margin="15dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bubble">
 
@@ -35,6 +36,6 @@
         </RelativeLayout>
 
 
-    </android.support.v7.widget.CardView>
+    </RelativeLayout>
 
 </RelativeLayout>
