--- a/app/src/main/res/layout/forumlayout.xml
+++ b/app/src/main/res/layout/forumlayout.xml
@@ -23,27 +23,9 @@
         android:id="@+id/pager"
         android:layout_below="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/doubt">
+        android:layout_height="wrap_content">
 
     </android.support.v4.view.ViewPager>
 
-    <EditText
-        android:id="@+id/doubt"
-        android:hint="Type here"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/send" />
-
-    <Button
-        android:id="@+id/send"
-        android:background="@color/colorPrimary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:text="POST"
-        android:textColor="#ffffff"/>
 
 </RelativeLayout>
