--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -6,8 +6,28 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/userRecycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/send"
+        android:layout_alignParentTop="true">
 
     </android.support.v7.widget.RecyclerView>
+
+    <EditText
+        android:id="@+id/doubt"
+        android:hint="Type here"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/send" />
+
+    <Button
+        android:id="@+id/send"
+        android:background="@color/colorPrimary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:text="POST"
+        android:textColor="#ffffff"/>
 
 </RelativeLayout>
