--- a/app/src/main/res/layout/nav_header_nav_dra.xml
+++ b/app/src/main/res/layout/nav_header_nav_dra.xml
@@ -14,6 +14,7 @@
     android:weightSum="1">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/constr"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -53,7 +54,8 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/pname" />
+            app:layout_constraintTop_toBottomOf="@+id/pname"
+            />
 
     </android.support.constraint.ConstraintLayout>
 
