--- a/app/src/main/res/layout/wifilayout.xml
+++ b/app/src/main/res/layout/wifilayout.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent"
     android:background="@drawable/background">
 
+    <Button
+        android:id="@+id/getWifi"
+        android:text="GET WIFI DETAILS"
+        android:textColor="#ffffff"
+        android:background="@color/colorPrimary"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <ImageView
         android:id="@+id/wifi"
         android:src="@drawable/wifi"
@@ -19,6 +28,7 @@
         android:text="Wi-fi certified by VOLSBB"
         android:textColor="#000000"
         android:textSize="24sp"
+        android:visibility="invisible"
         android:layout_below="@+id/wifi"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
@@ -27,6 +37,7 @@
     <TextView
         android:id="@+id/user"
         android:paddingTop="40dp"
+        android:visibility="invisible"
         android:text="USER ID"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -40,6 +51,7 @@
         android:text="ZXEYWNSO"
         android:textSize="24sp"
         android:textColor="#000000"
+        android:visibility="invisible"
         android:layout_below="@+id/user"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
@@ -50,6 +62,7 @@
         android:text="PASSWORD"
         android:textColor="#000000"
         android:textSize="24sp"
+        android:visibility="invisible"
         android:paddingTop="20dp"
         android:layout_below="@+id/id"
         android:layout_centerHorizontal="true"
@@ -61,6 +74,7 @@
         android:text="NDWI553EK"
         android:textColor="#000000"
         android:textSize="24sp"
+        android:visibility="invisible"
         android:layout_below="@+id/pass"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
