--- a/app/src/main/res/layout/speaker_details.xml
+++ b/app/src/main/res/layout/speaker_details.xml
@@ -1,50 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:background="@drawable/speaker_ticket"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent" >
+
+
+        <TextView
+            android:layout_width="247dp"
+            android:layout_height="43dp"
+            android:textSize="30sp"
+            android:text="Rishabh Mittal"
+            android:id="@+id/textView"
+            android:layout_marginTop="7dp"
+            app:layout_constraintTop_toBottomOf="@+id/speakerImg"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.702"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.238" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="22sp"
+            android:textColor="#999"
+            android:text="Developer"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="97dp"
+            app:layout_constraintHorizontal_bias="0.501"
+            android:id="@+id/textView2" />
 
         <ImageView
             android:id="@+id/speakerImg"
             android:src="@drawable/rishabh"
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="273dp"
+            android:layout_height="259dp"
+            android:layout_alignParentStart="true"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.148"
+            app:layout_constraintHorizontal_bias="0.505" />
 
         <ImageButton
             android:id="@+id/fb"
             android:background="@drawable/fb"
-            android:layout_marginTop="30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_below="@+id/speakerImg"
-            android:layout_alignStart="@+id/speakerImg" />
+            android:layout_alignStart="@+id/speakerImg"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.298"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintVertical_bias="0.324" />
 
         <ImageButton
             android:id="@+id/git"
             android:background="@drawable/github"
-            android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/speakerImg"/>
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_below="@+id/speakerImg"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="1dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.677"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintVertical_bias="0.272" />
 
         <ImageButton
             android:id="@+id/link"
             android:background="@drawable/link"
             android:layout_below="@+id/speakerImg"
-            android:layout_marginTop="30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/speakerImg" />
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_alignEnd="@+id/speakerImg"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="1dp"
+            app:layout_constraintRight_toLeftOf="@+id/git"
+            android:layout_marginRight="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/fb"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintHorizontal_bias="0.564"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintVertical_bias="0.272" />
 
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 
 
 </RelativeLayout>
