--- a/app/src/main/res/layout/forum_row_layout.xml
+++ b/app/src/main/res/layout/forum_row_layout.xml
@@ -8,12 +8,15 @@
 
     <RelativeLayout
         android:id="@+id/card"
-        android:layout_margin="15dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="2dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bubble">
 
-        <RelativeLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
@@ -23,20 +26,39 @@
 
             <TextView
                 android:id="@+id/ques"
-                android:padding="10dp"
-                android:text="The user's question will be shown here"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:padding="6dp"
+                android:text="The user's question will be shown here because it is being tested for longer texts how will they appear"
+                android:layout_width="263dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginRight="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="4dp"
+                app:layout_constraintHorizontal_bias="0.125"
+                app:layout_constraintVertical_bias="0.0" />
 
-            <ImageButton
+            <ImageView
                 android:id="@+id/upVote"
                 android:src="@drawable/like2"
-                android:background="#ffffff"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginLeft="278dp"
+                app:layout_constraintLeft_toLeftOf="@+id/ques"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintVertical_bias="0.3" />
 
-        </RelativeLayout>
+        </android.support.constraint.ConstraintLayout>
 
 
     </RelativeLayout>
