--- a/app/src/main/res/layout/wifilayout.xml
+++ b/app/src/main/res/layout/wifilayout.xml
@@ -12,12 +12,13 @@
         android:background="@color/colorPrimary"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/wifi"/>
 
     <ImageView
         android:id="@+id/wifi"
         android:src="@drawable/wifi"
-        android:paddingTop="70dp"
+        android:paddingTop="50dp"
         android:paddingBottom="50dp"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
@@ -36,7 +37,7 @@
 
     <TextView
         android:id="@+id/user"
-        android:paddingTop="40dp"
+        android:paddingTop="20dp"
         android:visibility="invisible"
         android:text="USER ID"
         android:textColor="#000000"
@@ -49,7 +50,7 @@
     <TextView
         android:id="@+id/id"
         android:text="ZXEYWNSO"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:textColor="#000000"
         android:visibility="invisible"
         android:layout_below="@+id/user"
@@ -61,9 +62,9 @@
         android:id="@+id/pass"
         android:text="PASSWORD"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:visibility="invisible"
-        android:paddingTop="20dp"
+        android:paddingTop="5dp"
         android:layout_below="@+id/id"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
@@ -73,8 +74,7 @@
         android:id="@+id/password"
         android:text="NDWI553EK"
         android:textColor="#000000"
-        android:textSize="24sp"
-        android:paddingBottom="5dp"
+        android:textSize="22sp"
         android:visibility="invisible"
         android:layout_below="@+id/pass"
         android:layout_centerHorizontal="true"
