--- a/app/src/main/res/layout/refreshment_row_layout.xml
+++ b/app/src/main/res/layout/refreshment_row_layout.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/refreshment_background"
         android:background="@drawable/speaker_ticket"
         android:layout_width="match_parent"
@@ -13,28 +15,60 @@
         <ImageView
             android:id="@+id/refreshment_qr"
             android:background="@drawable/qrcode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintVertical_bias="0.119" />
 
         <TextView
             android:id="@+id/refreshment_type"
             android:text="LUNCH"
+            android:padding="15dp"
             android:textSize="30sp"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
             android:layout_below="@+id/refreshment_qr"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/refreshment_qr"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.223" />
 
         <TextView
             android:id="@+id/date"
             android:text="09/09/17"
+            android:textSize="20sp"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/refreshment_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="86dp"
+            android:layout_height="21dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/refreshment_type"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.0" />
 
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
