--- a/app/src/main/res/layout/attendancelayout.xml
+++ b/app/src/main/res/layout/attendancelayout.xml
@@ -26,56 +26,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/qr1"
-            app:layout_constraintHorizontal_bias="0.501"
-            app:layout_constraintVertical_bias="1.0" />
-
-        <LinearLayout
-            android:layout_width="311dp"
-            android:id="@+id/attstatus"
-            android:orientation="horizontal"
-            android:layout_height="42dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/qr1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="0dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintVertical_bias="0.352"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.571">
-
-        <TextView
-            android:layout_width="111dp"
-            android:layout_height="37dp"
-            android:textSize="20sp"
-            android:text="Attendance-"
-            android:id="@+id/textView"
-            android:layout_marginStart="30dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="116dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintVertical_bias="0.993" />
-
-            <TextView
-                android:id="@+id/status"
-                android:layout_width="99dp"
-                android:layout_height="37dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="72dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Absent"
-                android:textColor="@color/colorPrimary"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/qrpname"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
-
-        </LinearLayout>
+            app:layout_constraintVertical_bias="0.111" />
 
         <ImageView
             android:id="@+id/qr1"
@@ -95,38 +46,39 @@
         <TextView
             android:id="@+id/qrpname"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
+            android:paddingTop="15dp"
             android:text="Participant Name"
             android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="24sp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/attstatus"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginBottom="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/qrpreg"
-            app:layout_constraintHorizontal_bias="0.152"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toBottomOf="@+id/qr1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.36"
+            app:layout_constraintHorizontal_bias="0.504" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="22sp"
             android:text="16BCE0001"
             android:id="@+id/qrpreg"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/attstatus"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.11"
-            app:layout_constraintVertical_bias="0.443" />
+            app:layout_constraintHorizontal_bias="0.502"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/qrpname"
+            app:layout_constraintVertical_bias="0.0" />
 
 
 
