--- a/app/src/main/res/layout/refreshment_row_layout.xml
+++ b/app/src/main/res/layout/refreshment_row_layout.xml
@@ -14,7 +14,6 @@
 
         <ImageView
             android:id="@+id/refreshment_qr"
-            android:background="@drawable/qrcode"
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:layout_alignParentTop="true"
@@ -58,7 +57,7 @@
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/refreshment_type"
             android:layout_width="86dp"
-            android:layout_height="21dp"
+            android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="8dp"
