--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#ff3b30</color>
     <color name="colorPrimaryDark">#ff3b30</color>
     <color name="colorAccent">#ffffff</color>
+    <color name="QRCodeBlack">#000000</color>
 </resources>
