--- a/app/src/main/res/layout/developers.xml
+++ b/app/src/main/res/layout/developers.xml
@@ -48,19 +48,11 @@
 
     <TextView
         android:layout_centerHorizontal="true"
-        android:id="@+id/naman"
-        android:text="Naman Krupia"
-        android:layout_below="@id/shivam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_centerHorizontal="true"
         android:id="@+id/ios_dev"
         android:text="iOS Developers"
         android:textSize="25sp"
-        android:layout_marginTop="14dp"
-        android:layout_below="@id/naman"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/mehakmeet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -102,7 +94,7 @@
         android:text="Backend Developer"
         android:textSize="25sp"
         android:layout_below="@id/akshat"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -119,7 +111,7 @@
         android:id="@+id/designers"
         android:text="Designers"
         android:textSize="25sp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="20dp"
         android:layout_below="@id/ajmal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -137,6 +129,13 @@
         android:id="@+id/naman2"
         android:text="Naman Krupia"
         android:layout_below="@id/aritro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:text="Salonee Gupta"
+        android:layout_below="@id/naman2"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
