--- a/app/src/main/res/layout/timelinerow.xml
+++ b/app/src/main/res/layout/timelinerow.xml
@@ -41,40 +41,38 @@
 
         <TextView
             android:id="@+id/ltime"
-            android:layout_width="88dp"
-            android:layout_height="35dp"
+            android:layout_width="wrap_content"
+            android:layout_height="41dp"
             android:layout_below="@+id/l1part"
             android:layout_marginBottom="16dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginLeft="21dp"
             android:layout_toEndOf="@+id/l1part"
-            android:text="9:00-10:00"
+            android:text="9:00 pm"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/details" />
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <TextView
             android:id="@+id/details"
-            android:layout_width="206dp"
-            android:layout_height="36dp"
+            android:layout_width="197dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/r1part"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:lines="3"
             android:text="Instructions"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/r1part"
             app:layout_constraintVertical_bias="0.0"
-            tools:layout_editor_absoluteX="116dp"
-            tools:layout_editor_absoluteY="66dp" />
+            app:layout_constraintLeft_toRightOf="@+id/ltime"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintHorizontal_bias="0.829" />
 
         <TextView
             android:id="@+id/r1part"
