--- a/app/src/main/res/layout/wifilayout.xml
+++ b/app/src/main/res/layout/wifilayout.xml
@@ -7,9 +7,9 @@
 
     <Button
         android:id="@+id/getWifi"
-        android:text="GET WIFI DETAILS"
+        android:text=" GET WIFI DETAILS "
         android:textColor="#ffffff"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/buttonlook"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
