QR Codes working

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#ff3b30</color>
     <color name="colorPrimaryDark">#ff3b30</color>
-    <color name="colorAccent">#ffffff</color>
+    <color name="colorAccent">#ffe100</color>
+    <color name="colorWhite">#ffffff</color>
     <color name="QRCodeBlack">#000000</color>
 </resources>
