--- a/app/src/main/res/layout/wifilayout.xml
+++ b/app/src/main/res/layout/wifilayout.xml
@@ -14,12 +14,13 @@
         android:background="@drawable/buttonlook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="19dp"
         android:layout_below="@+id/password"
         android:layout_centerHorizontal="true" />
 
     <TextView
         android:textColor="#605e5d"
+        android:layout_below="@+id/getWifi"
+        android:layout_marginTop="5dp"
         android:text="Copyright (c) 2016-2017 VOLSBB Inc. All rights reserved"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
