--- a/app/src/main/res/layout/forum_question.xml
+++ b/app/src/main/res/layout/forum_question.xml
@@ -16,6 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Please post your question"
+            android:textStyle="bold"
             android:textSize="23sp"
             android:textColor="#000000" />
 
@@ -26,6 +27,8 @@
 
         <Button
             android:id="@+id/forum_submit"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/colorWhite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SUBMIT"/>
